<resources>
    <string name="app_name">MarvelApp</string>
    <string name="marvel">Marvel</string>
    <string name="spider_man">Spider Man</string>
    <string name="welcome_to_marvel">Welcome to the Marvel HQ\'s</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create account</string>
    <string name="remember">Remember</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>